--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>G3t L0st WithMÉ</title>
-<meta content='https://raw.githubusercontent.com/Somosmillos25/foto2/main/WhatsApp%20Image%202023-12-01%20at%2011.44.59%20PM%20(2).jpeg' property='og:image'/>
+<title>H00t Encounterz</title>
+<meta content='https://raw.githubusercontent.com/Somosmillos25/foto2/main/WhatsApp%20Image%202023-12-01%20at%2011.44.59%20PM.jpeg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -20,7 +20,7 @@
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
-<img src="https://i.imgur.com/t9Z6QTK.png" alt="">
+<img src="https://i.imgur.com/GWJjSTo.png" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
