--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>H00t Encounterz</title>
+<title>Girls Enc0unt3rs</title>
 <meta content='https://raw.githubusercontent.com/Somosmillos25/foto2/main/WhatsApp%20Image%202023-12-01%20at%2011.44.59%20PM.jpeg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
